--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Shihan Kanungo
 url: https://www.shihankanungo.github.io/shihanmoonwalk/ # root address of the site
 description: > # description of the site (multiple lines allowed) 
   <img src="images/pic.jpg" alt="Avatar" style="width:250px; border-radius:50%;"> <br />
-  Hey! I'm Shihan&mdash;thanks for stopping by! I'm a high school junior from Palo Alto, CA, with a deep fascination for mathematics, physics, language, and music. I play the violin, love composing with my MPK Mini Plus, and have an eclectic taste in listening. When I am not actually engrossed in one of these, you will still find me pretending to be so, though secretly I will be daydreaming about food. I aspire to nurture my passions and use them to make meaningful contributions to society&mdash;while having fun doing so!
+  Hello there! I’m Shihan&mdash;thanks for stopping by. I’m a high school junior from Palo Alto, CA, with a keen interest in mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). <br />When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative---while secretly daydreaming about my next snack. I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
           <small><b>Sidenote</b>: <i>I'm looking to work on a hard research problem in combinatorics/graph theory. Please let me know if you, or someone you know, is interested in mentoring such a project! </i></small>
