--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently playing</b>: <i>Carmen Fantasy, Op. 25</i>, by Pablo de Sarasate (1881), and <i>Sonata No. 3 in C major, BWV 1005</i>, by Johann Sebastian Bach.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>We Want the Funk!</i> (2025 d. Stanley Nelson and Nicole London), and <i>Juno</i> (2007 d. Jason Reitman). </small>
+          <small><b>Recent Movies</b>: <i>We Want the Funk!</i> (2025 d. Stanley Nelson and Nicole London), and <i>Zero Dark Thirty</i> (2012 d. Kathryn Bigelow). </small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Odelay</i> by Beck (<a href="https://open.spotify.com/album/1Pus5h1qGedCn4CtOuPVtp?si=5TMaPZtjQeiM_WgCF-HBRg">Spotify</a>), and <i>Live at Macalester College</i> by The Byard Lancaster Unit. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
