--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # description of the site (multiple lines allowed)
   Hello there! I’m Shihan&mdash;thanks for stopping by. I’m a high school junior from Palo Alto, CA, with a keen interest in mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). <br />When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack.<br /> I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
-          <small><b>Recent news</b>: Richard Bamler, a mathematician at UC Berkeley, and Bruce Kleiner of NYU have proved the multiplicity-one conjecture. Their work not only advances the understanding of mean curvature flow but also holds significant potential for applications across geometry and topology. </small>
+          <small><b>Recent news</b>: The USA team for IMO 2025 has been selected: Alexander Wang, Hannah Fox, Karn Chutinan, Andrew Lin, Calvin Wang, and Tiger Zhang. The IMO 2025 will be held in Sunshine Coast, Australia from Jul 10--20, 2025. </small>
           <br /><br />
           <small><b>Currently reading</b>: <i>An Artist of the Floating World</i> by Kazuo Ishiguro, <i>London: The Biography</i> by Peter Ackroyd, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
