--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>American Gods</i> by Neil Gaiman, <i>London: The Biography</i> by Peter Ackroyd, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>Kung Fu Panda</i>  (2008 d. John Stevenson and Mark Osborne), and <i>Pink Floyd at Pompeii – MCMLXXII</i>  (2025 d. Adrian Maben). </small>
+          <small><b>Recent Movies</b>: <i>Kung Fu Panda</i>  (2008 d. John Stevenson and Mark Osborne), <i>Becoming Led Zeppelin</i>  (2025 d. Bernard MacMahon), and <i>Pink Floyd at Pompeii – MCMLXXII</i>  (2025 d. Adrian Maben). </small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Odelay</i> by Beck (<a href="https://open.spotify.com/album/1Pus5h1qGedCn4CtOuPVtp?si=5TMaPZtjQeiM_WgCF-HBRg">Spotify</a>), and <i>Live at Macalester College</i> by The Byard Lancaster Unit. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
