--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # description of the site (multiple lines allowed)
 
           <small><b>Recent news</b>: The 2025 International Mathematical Olympiad (IMO'25) will be held in Sunshine Coast, Australia from Jul 10&mdash;20, 2025. The USA team for IMO 2025 has been announced: Alexander Wang, Hannah Fox, Karn Chutinan, Andrew Lin, Calvin Wang, and Tiger Zhang. Congratulations and the very best wishes to all. May the odds be ever in your favor!</small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>American Gods</i> by Neil Gaiman, <i>London: The Biography</i> by Peter Ackroyd, and <i>A People's History of the United States</i> by Howard Zinn.</small>
+          <small><b>Currently reading</b>: <i>London: The Biography</i> by Peter Ackroyd, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Alice Doesn't Live Here Anymore</i> (1974 d. Martin Scorsese), and <i>Becoming Led Zeppelin</i>  (2025 d. Bernard MacMahon). </small>
           <br /><br />
