--- a/_data/home.yml
+++ b/_data/home.yml
@@ -46,7 +46,7 @@ project_entries:
    
   - title: MIT PRIMES-USA '24
     url: primes-24-2
-    desc: Representations of twisted Yangians in complex rank. <br> In progress. <br> Mentor AS Kannan (MIT).
+    desc: Representation theory of twisted Yangians in complex rank. <br> Mentor AS Kannan (MIT).
     
   - title: MIT PRIMES-USA '24
     url: primes-24-1
