--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>London: The Biography</i> by Peter Ackroyd, and <i>A People's History of the United States</i> by Howard Zinn.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>Alice Doesn't Live Here Anymore</i> (1974 d. Martin Scorsese), and <i>Becoming Led Zeppelin</i>  (2025 d. Bernard MacMahon). </small>
+          <small><b>Recent Movies</b>: <i>Alice Doesn't Live Here Anymore</i> (1974 d. Martin Scorsese), and <i>Hard Problems: The Road to the World's Toughest Math Contest</i>  (2008 d. George Paul Csicsery). </small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Remain in Light</i> by Talking Heads (<a href="https://open.spotify.com/album/1JvXxLsm0PxlGH4LXzqMGq?si=_kYs0aYvQq6vEF-WYJGuCg">Spotify</a>), and <i>Live at Macalester College</i> by The Byard Lancaster Unit. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
