--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # description of the site (multiple lines allowed)
 
           <small><b>Recent news</b>: Hilbert's 10th problem, which was answered in the negative by Mazur--Rubin (2009) but conditionally on BSD, has now been resolved unconditionally by Peter Koymans and Carlo Pogano.</small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>London: The Biography</i> by Peter Ackroyd, and <i>The Eye of the World</i> by Robert Jordan.</small>
+          <small><b>Currently reading</b>: <i>The Eye of the World</i> by Robert Jordan, <i>The Great Hunt</i> by Robert Jordan, and <i>London: The Biography</i> by Peter Ackroyd.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Secrets of the Surface: The Mathematical Vision of Maryam Mirzakhani</i> (2020 d. George Paul Csicsery), and <i>Hard Problems: The Road to the World's Toughest Math Contest</i>  (2008 d. George Paul Csicsery). </small>
           <br /><br />
