--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # description of the site (multiple lines allowed)
   Hello there! I’m Shihan&mdash;thanks for stopping by. I’m a high school junior from Palo Alto, CA, with a keen interest in mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). <br />When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack.<br /> I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
-          <small><b>Recent news</b>: One of my favorite classical pianists, Alfred Brendel, passed away today, June 17 2025. I am particularly fond of his Beethoven, Schubert, and Haydn piano sonatas.</small>
+          <small><b>Recent news</b>: One of my favorite classical pianists, Alfred Brendel, passed away today, June 17 2025. He was 94. I am particularly fond of his Beethoven, Schubert, and Haydn piano sonatas.</small>
           <br /><br />
           <small><b>Currently reading</b>: <i>The Dragon Reborn</i> by Robert Jordan, and <i>London: The Biography</i> by Peter Ackroyd.</small>
           <br /><br />
