--- a/_data/home.yml
+++ b/_data/home.yml
@@ -49,6 +49,9 @@ mop_entries:
   - title: Day 10
     url: mop#day-10--friday-june-20-2025
 
+  - title: Day 15
+    url: mop#day-15--wednesday-june-25-2025
+
   - title: Music
     url: mop#music
 
