--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,10 @@ highlighter: rouge
 sass:
   style: :compressed
 
+markdown: kramdown
+kramdown:
+  math_engine: mathjax
+
 plugins:
   - jekyll-feed
   - jekyll-soopr-seo-tag
