--- a/_data/home.yml
+++ b/_data/home.yml
@@ -41,16 +41,16 @@ personal_entries:
 
 mop_entries:
   - title: Day 1
-    url: mop#day-1--wednesday-june-11-2025
+    url: mop.md#day-1--wednesday-june-11-2025
 
   - title: Day 5
-    url: mop#day-5--sunday-june-15-2025
+    url: mop.md#day-5--sunday-june-15-2025
 
   - title: Day 10
-    url: mop#day-10--friday-june-20-2025
+    url: mop.md#day-10--friday-june-20-2025
 
   - title: Day 15
-    url: mop#day-15--wednesday-june-25-2025
+    url: mop.md#day-15--wednesday-june-25-2025
 
   - title: Music
     url: mop#music
