--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ author: Shihan Kanungo
 url: https://www.shihankanungo.github.io/shihanmoonwalk/ # root address of the site
 description: > # description of the site (multiple lines allowed) 
   <img src="images/pic.jpg" alt="Avatar" style="width:250px; border-radius:50%;"> <br />
-  Hello there! I’m Shihan&mdash;thanks for stopping by. I’m a high school junior from Palo Alto, CA, with a keen interest in mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). <br />When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack.<br /> I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
+  Hello there! I’m Shihan&mdash;thanks for stopping by. I live in Palo Alto, CA and am currently on a gap year after my junior year of high school. I have a keen interest in mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). <br />When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack.<br /> I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
-          <small><b>Recent news</b>: One of my favorite classical pianists, Alfred Brendel, passed away today, June 17 2025. He was 94. I am particularly fond of his Beethoven, Schubert, and Haydn piano sonatas.</small>
+          <small><b>Recent news</b>: Hannah Cairo, a 17-year-old highschool student, has solved the so-called Mizohata-Takeuchi conjecture, a problem in harmonic analysis, proposed 40 years ago, and closely linked to other central results in the field. This fall, she will begin her doctoral studies at the University of Maryland. </small>
           <br /><br />
           <small><b>Currently reading</b>: <i>The Dragon Reborn</i> by Robert Jordan, and <i>London: The Biography</i> by Peter Ackroyd.</small>
           <br /><br />
