--- a/_data/home.yml
+++ b/_data/home.yml
@@ -58,6 +58,21 @@ mop_entries:
   - title: The end
     url: mop#the-end
 
+course_entries:
+  - title: Analysis & Geometry
+    url: courses#analysis-and-geometry
+
+  - title: Algebra & Number Theory
+    url: courses#algebra-and-number-theory
+
+  - title: Representation Theory
+    url: courses#representation-theory
+
+  - title: Linear Algebra & Matrix Theory
+    url: courses#linear-algebra-and-matrix-theory
+
+  - title: Combinatorics & Graph Theory
+    url: courses#combinatorics-and-graph-theory
 
 project_entries:
   - title: MIT PRIMES-USA '25
