--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ theme_config:
   show_footer: true # show footer links in home page,add in _data/home.yml
   show_personal: true # show links in about page,add in _data/home.yml
   show_mop: true # show links in mop page,add in _data/home.yml
+  show_courses: true # show links in course page,add in _data/home.yml
   show_copyright: true # show copyright notice in footer
   # following keys are using to create home layout
   show_projects: true # show projects as cards, add in _data/home.yml
