--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: > # description of the site (multiple lines allowed)
   Hello there! I’m Shihan&mdash;thanks for stopping by. I live in Palo Alto, CA. I am deeply fascinated by mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack. I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
+          <small><b>Recent news</b>: Mathematician Boaz Klartag, a complete newcomer to the world of sphere packing has solved one of its biggest open problems. Klartag has achieved a packing method — which works in all arbitrarily high dimensions — and improves upon previous records by a significant margin. Some researchers believe his result might be close to optimal. </small>
+          <br /><br />
           <small><b>Recent news</b>: Hannah Cairo, a 17-year-old highschool student, has solved the so-called Mizohata-Takeuchi conjecture, a problem in harmonic analysis, proposed 40 years ago, and closely linked to other central results in the field. This fall, she will begin her doctoral studies at the University of Maryland. </small>
           <br /><br />
           <small><b>Currently reading</b>: <i>The Dragon Reborn</i> by Robert Jordan, and <i>London: The Biography</i> by Peter Ackroyd.</small>
