--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Recent Movies</b>: <i>A Beautiful Mind</i> (2001 d. Ron Howard), and <i>The Imitation Game</i>  (2014 d. Morten Tyldum). </small>
           <br /><br />
-          <small><b>Current Music Recs</b>: <i>Remain in Light</i> by Talking Heads (<a href="https://open.spotify.com/album/1JvXxLsm0PxlGH4LXzqMGq?si=_kYs0aYvQq6vEF-WYJGuCg">Spotify</a>), and <i>Live at Macalester College</i> by The Byard Lancaster Unit. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
+          <small><b>Current Music Recs</b>: <i>TRACES</i> by Cosmic Ear (<a href="https://open.spotify.com/album/5w9BePfYZwwK2aaXq3HnJt?si=TKmO0iPZR52SDrdk7vAmIg">Spotify</a>), and <i>Live at Macalester College</i> by The Byard Lancaster Unit. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
           
   <img className="mt-8 md:mt-12 w-1/2 sm:w-1/3 lg:w-1/4" src="/signature.png" alt="signature of shihan" aria-hidden="true" />    
