--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Recent news</b>: Hannah Cairo, a 17-year-old highschool student, has solved the so-called Mizohata-Takeuchi conjecture, a problem in harmonic analysis, proposed 40 years ago, and closely linked to other central results in the field. This fall, she will begin her doctoral studies at the University of Maryland. </small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>The Dragon Reborn</i> by Robert Jordan, and <i>London: The Biography</i> by Peter Ackroyd.</small>
+          <small><b>Currently reading</b>: <i>A Clockwork Orange</i> by Anthony Burgess, and <i>London: The Biography</i> by Peter Ackroyd.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Rushmore</i> (1998 d. Wes Anderson), <i>F1</i> (2025 d. Joseph Kosinski), <i>A Beautiful Mind</i> (2001 d. Ron Howard), and <i>The Imitation Game</i>  (2014 d. Morten Tyldum). </small>
           <br /><br />
