--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>A Clockwork Orange</i> by Anthony Burgess, and <i>London: The Biography</i> by Peter Ackroyd.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>Rushmore</i> (1998 d. Wes Anderson), <i>F1</i> (2025 d. Joseph Kosinski), <i>A Beautiful Mind</i> (2001 d. Ron Howard), and <i>The Imitation Game</i>  (2014 d. Morten Tyldum). </small>
+          <small><b>Recent Movies</b>: <i>Wallace & Gromit: Vengeance Most Fowl</i> (2024 d. Nick Park, Merlin Crossingham), and <i>F1</i> (2025 d. Joseph Kosinski) </small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>TRACES</i> by Cosmic Ear (<a href="https://open.spotify.com/album/5w9BePfYZwwK2aaXq3HnJt?si=TKmO0iPZR52SDrdk7vAmIg">Spotify</a>), and <i>Live at Macalester College</i> by The Byard Lancaster Unit. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
