--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Recent news</b>: Hannah Cairo, a 17-year-old highschool student, has solved the so-called Mizohata-Takeuchi conjecture, a problem in harmonic analysis, proposed 40 years ago, and closely linked to other central results in the field. This fall, she will begin her doctoral studies at the University of Maryland. </small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>A Clockwork Orange</i> by Anthony Burgess, and <i>London: The Biography</i> by Peter Ackroyd.</small>
+          <small><b>Currently reading</b>: <i>A Clockwork Orange</i> by Anthony Burgess, and <i>The Formula: How Rogues, Geniuses, and Speed Freaks Reengineered F1 into the World's Fastest-Growing Sport</i> by Joshua Robinson and Jonathan Clegg.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Wallace & Gromit: Vengeance Most Fowl</i> (2024 d. Nick Park, Merlin Crossingham), and <i>Wallace & Gromit: The Curse of the Were-Rabbit</i> (2005 d. Nick Park, Steve Box) </small>
           <br /><br />
