--- a/_data/home.yml
+++ b/_data/home.yml
@@ -34,7 +34,7 @@ math_entries:
     url: math-talks
 
 activities_entries:
-  - title: Books
+  - title: Reading
     url: books
 
   - title: Music
