--- a/_data/home.yml
+++ b/_data/home.yml
@@ -148,7 +148,7 @@ footer_entries:
   #   url: https://scholar.google.com/citations?user=URUoNyoAAAAJ&hl=en&authuser=1
 
   - title: Music
-    url: music
+    url: music-recs
 
 misc_entries:
   - title: this is an example vertical list
