--- a/_data/home.yml
+++ b/_data/home.yml
@@ -8,7 +8,7 @@ navbar_entries:
   - title: Mathematics
     url: math
 
-  - title: &amp;c.
+  - title: etc.
     url: activities
 
   - title: Honors
