--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>A Clockwork Orange</i> by Anthony Burgess, and <i>What I Talk About When I Talk About Running</i> by Haruki Murakami.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>The Wonderful Story of Henry Sugar</i> (2023 d. Wes Anderson), and <i>Wallace & Gromit: The Curse of the Were-Rabbit</i> (2005 d. Nick Park, Steve Box) </small>
+          <small><b>Recent Movies</b>: <i>The Wonderful Story of Henry Sugar</i> (2023 d. Wes Anderson), and <i>Coda</i> (2021 d. Sian Heder) </small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Sour Soul</i> by BadBadNotGood and Ghostface Killah (<a href="https://open.spotify.com/album/4aTYhHG0A0MX8iBQ4UTgoN?si=2fbM1olKQnWfkRsqUsfdEg">Spotify</a>), and <i>Chasin' the Gypsy</i> by James Carter. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
