--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # description of the site (multiple lines allowed)
 
           <small><b>Recent news</b>: USA Earns Second Place at 66th International Mathematical Olympiad, held from July 10--20, 2025, on the Sunshine Coast of Australia. The 2025 USA IMO team is: <b>Hannah Fox</b>, 17 (CA), <b>Karn Chutinan</b>, 18 (MA), <b>Andrew Lin</b>, 18 (NJ), <b>Alexander Wang</b>, 17 (NJ), <b>Qiao (Tiger) Zhang</b>, 17 (CA), and <b>Ruilin (Calvin) Wang</b>, 17 (VA). <br>  US students Tiger Zhang and Alexander Wang placed in the top ten among all individuals. Hannah Fox's participation marks the second consecutive year that the USA IMO team has included a young woman. </small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>Kafka on the Shore</i> by Haruki Murakami, and <i>Norwegian Wood</i>, also by Haruki Murakami.</small>
+          <small><b>Currently reading</b>: <i>Kafka on the Shore</i> by Haruki Murakami, and <i>The Wind-Up Bird Chronicle</i>, also by Haruki Murakami.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Fantastic Mr. Fox</i> (2009 d. Wes Anderson), and <i>Coda</i> (2021 d. Sian Heder) </small>
           <br /><br />
