--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # description of the site (multiple lines allowed)
 
           <small><b>Recent news</b>: Taylor Swift announces her next era: 'The Life of a Showgirl'. The album has 12 tracks &mdash; a nod to this being her 12th album &mdash; and includes a cover of George Michael’s 1987 song <i>Father Figure</i>. It also includes a collaboration with Sabrina Carpenter on the title track. It will be released 3 October. </small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>There's Always This Year: On Basketball and Ascension</i> by Hanif Abdurraqib and <i>To The Lighthouse</i> by Virginia Woolf.</small>
+          <small><b>Currently reading</b>: <i>My Name Is Red</i> by Orhan Pamuk and <i>To The Lighthouse</i> by Virginia Woolf.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Fantastic Mr. Fox</i> (2009 d. Wes Anderson), and <i>Moonrise Kingdom</i> (2012 d. Wes Anderson) </small>
           <br /><br />
