--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # description of the site (multiple lines allowed)
   Hello there! I’m Shihan&mdash;thanks for stopping by. I live in Palo Alto, CA. I am deeply fascinated by mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack. I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
-          <small><b>Recent news</b>: Martin Larocca (Los Alamos National Laboratory) and Vojtěch Havliček (IBM) demonstrate "quantum advantage", where quantum computers can solve meaningful problems that are intractable for classical machines. They show that an algorithm using quantum Fourier transforms can "factor group representations" efficiently.  Their paper is published in Physical Review Letters. </small>
+          <small><b>Recent news</b>: Martin Larocca (Los Alamos National Laboratory) and Vojtěch Havliček (IBM) show that an algorithm using quantum Fourier transforms can "factor group representations" efficiently, thereby demonstrating "quantum advantage", where quantum computers can solve meaningful problems that are intractable for classical machines. Their paper is published in Physical Review Letters. </small>
           <br /><br />
           <small><b>Currently reading</b>: <i>My Name Is Red</i> by Orhan Pamuk and <i>To The Lighthouse</i> by Virginia Woolf.</small>
           <br /><br />
