--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # description of the site (multiple lines allowed)
 
           <small><b>Recent news</b>: Mathematicians Mark Brittenham and Susan Hermiller have disproved the additivity conjecture &mdash; a fundamental, 88-year-old conjecture in knot theory, that says that if you combine two knots, the number of changes you'd need to untie the new knot would just be the sum of the two original numbers. Brittenham and Hermiller found out that this isn’t always true. They took a knot called the (2,7)-torus knot and joined it with its mirror image. It should take 6 changes to untie, but it actually takes only 5 or fewer, meaning unknotting numbers don’t always add up the way as originally thought. </small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>My Name Is Red</i> by Orhan Pamuk and <i>To The Lighthouse</i> by Virginia Woolf.</small>
+          <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>To The Lighthouse</i> by Virginia Woolf.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>The Grand Budapest Hotel</i> (2014 d. Wes Anderson), and <i>Moonrise Kingdom</i> (2012 d. Wes Anderson) </small>
           <br /><br />
