--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # description of the site (multiple lines allowed)
   Hello there! I’m Shihan&mdash;thanks for stopping by. I live in Palo Alto, CA. I am deeply fascinated by mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack. I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
-          <small><b>Recent news</b>: Mathematicians Mark Brittenham and Susan Hermiller have disproved the additivity conjecture &mdash; a fundamental, 88-year-old conjecture in knot theory, that says that if you combine two knots, the number of changes you'd need to untie the new knot would just be the sum of the two original numbers. Brittenham and Hermiller found out that this isn’t always true. They took a knot called the (2,7)-torus knot and joined it with its mirror image. It should take 6 changes to untie, but it actually takes only 5 or fewer, meaning unknotting numbers don’t always add up the way as originally thought. </small>
+          <small><b>Recent news</b>: This is Tay week! &mdash; TS12 drops on Thursday, October 2; 3 days to go... </small>
           <br /><br />
           <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>To The Lighthouse</i> by Virginia Woolf.</small>
           <br /><br />
