--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # description of the site (multiple lines allowed)
 
           <small><b>Recent news</b>: This is Tay week! &mdash; TS12 drops on Friday, October 3 (Thursday 9PM PT), and we have the countdown below. This is why I have changed the theme color to some form of orange. So excited for this ... </small>
           <br>
-          <p id="countdown"></p>
+          <p id="countdown" style="font-size:small; font-weight:bold;"></p>
           <script>
           const release = new Date("2025-10-03T04:00:00Z"); // your target UTC time
           function updateCountdown() {
