--- a/_config.yml
+++ b/_config.yml
@@ -6,26 +6,7 @@ description: > # description of the site (multiple lines allowed)
   Hello there! I’m Shihan&mdash;thanks for stopping by. I live in Palo Alto, CA. I am deeply fascinated by mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack. I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
-          <small><b>Recent news</b>: This is Tay week! &mdash; TS12 drops on Friday, October 3 (Thursday 9PM PT), so we have ... </small>
-          <br>
-          <p id="countdown" style="font-size:small; font-weight:bold;" align="center"></p>
-          <script>
-          const release = new Date("2025-10-03T04:00:00Z"); // your target UTC time
-          function updateCountdown() {
-            const now = new Date();
-            const diff = release - now;
-            if (diff < 0) {document.getElementById("countdown").innerHTML = "Released!"; return;}
-            const d = Math.floor(diff / (1000*60*60*24));
-            const h = Math.floor(diff / (1000*60*60)) % 24;
-            const m = Math.floor(diff / (1000*60)) % 60;
-            const s = Math.floor(diff / 1000) % 60;
-            document.getElementById("countdown").innerHTML =
-               `${h} hours ${m} minutes ${s} seconds`;
-          }
-          setInterval(updateCountdown, 1000);
-          updateCountdown();
-          </script>
-          <small>... remaining till D-Day! Note that I have changed the theme color to some form of orange to commemorate this epochal event. So excited for this ... </small>
+          <small><b>Recent news</b>: This is Tay week! &mdash; <i>The Life of a Showgirl</i> dropped! </small>
           <br /><br />
           <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>To The Lighthouse</i> by Virginia Woolf.</small>
           <br /><br />
