--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # description of the site (multiple lines allowed)
   Hello there! I’m Shihan&mdash;thanks for stopping by. I live in Palo Alto, CA. I am deeply fascinated by mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack. I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
-          <small><b>Recent news</b>: This is Tay week! &mdash; <i>The Life of a Showgirl</i> dropped! </small>
+          <small><b>Recent news</b>: In case you have been living under a rock &mdash; <i>The Life of a Showgirl</i> dropped on Thursday, Oct 02! What are you waiting for? Go enjoy! You are very welcome. </small>
           <br /><br />
           <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>To The Lighthouse</i> by Virginia Woolf.</small>
           <br /><br />
