--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Recent Movies</b>: <i>The Grand Budapest Hotel</i> (2014 d. Wes Anderson), and <i>Moonrise Kingdom</i> (2012 d. Wes Anderson) </small>
           <br /><br />
-          <small><b>Current Music Recs</b>: <i>Fishscale</i> by Ghostface Killah (<a href="https://open.spotify.com/album/0gaLZATMEssSErDzywUqxD?si=ufRept-vSn-lnVEGb8gT3g">Spotify</a>), and <i>Chasin' the Gypsy</i> by James Carter. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
+          <small><b>Current Music Recs</b>: <i>Renaissance</i> by Beyonce (<a href="https://open.spotify.com/album/6FJxoadUE4JNVwWHghBwnb?si=RSfqXehORo2QK4Dg95FFuA">Spotify</a>), and <i>Remain In Light</i> by Angelique Kidjo. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
           
   <img className="mt-8 md:mt-12 w-1/2 sm:w-1/3 lg:w-1/4" src="/signature.png" alt="signature of shihan" aria-hidden="true" />    
