--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # description of the site (multiple lines allowed)
 
           <small><b>Recent news</b>: <i></i> Origami Patterns Solve a Major Physics Riddle: In his recent work <i>Amplituhedra and Origami</i>, Pavel Galashin reveals a striking bijection between points of the momentum amplituhedron &mdash; an essential geometric tool for computing particle scattering amplitudes—and origami crease patterns. This breakthrough introduces a fresh combinatorial and polyhedral framework for understanding scattering amplitudes, recasting complex high-energy physics calculations into the language of discrete geometry and forging a new geometric bridge between particle-physics combinatorics and the mathematics of paper folding. </small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>The Usefulness of Useless Knowledge</i> by Abraham Flexner.</small>
+          <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>Black Dogs</i> by Ian McEwan.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Forrest Gump</i> (1994 d. Robert Zemeckis), and <i>Moonrise Kingdom</i> (2012 d. Wes Anderson) </small>
           <br /><br />
