--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # description of the site (multiple lines allowed)
 
           <small><b>Recent news</b>: <i>Physicists take imaginary numbers out of quantum mechanics.</i> A novel reformulation of quantum mechanics eliminates the necessity of imaginary numbers in its core mathematical structure, replacing them with real-valued vectors and alternative tensor rules.</small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>Saturday</i> by Ian McEwan.</small>
+          <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>Crime and Punishment</i> by Fyodor Dostoevsky.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Forrest Gump</i> (1994 d. Robert Zemeckis), and <i>Moonrise Kingdom</i> (2012 d. Wes Anderson) </small>
           <br /><br />
