--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # description of the site (multiple lines allowed)
   Hello there! I’m Shihan&mdash;thanks for stopping by. I live in Palo Alto, CA. I am deeply fascinated by mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack. I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
-          <small><b>Recent news</b>: <i>Terence Tao & Google Deepmind explore AlphaEvolve.</i> A new paper records experiments using the LLM-powered optimization tool AlphaEvolve to attack 67 different math problems (both solved and unsolved), improving upon the state of the art in some cases and matching previous literature in others. </small>
+          <small><b>Recent news</b>: <i>GPT-5 helps mathematician solve a 40-year-old open problem.</i>The AI collaborated with UCLA Professor Ernest Ryu to help solve a decades-old optimisation problem, demonstrating its ability to contribute meaningfully to high-level mathematical research. The system found new examples showing where certain mathematical methods can fail whilst simultaneously improving classic results in optimisation theory.</small>
           <br /><br />
           <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>Crime and Punishment</i> by Fyodor Dostoevsky.</small>
           <br /><br />
