--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>Crime and Punishment</i> by Fyodor Dostoevsky.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>Kill Bill: Vol. 1</i>  (2003 d. Quentin Tarantino), and <i>Catch Me If You Can</i> (2002 d. Steven Spielberg)</small>
+          <small><b>Recent Movies</b>: <i>Kill Bill: Vol. 1</i>  (2003 d. Quentin Tarantino), and <i>Kill Bill: Vol. 2</i> (2004 d. Quentin Tarantino)</small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Renaissance</i> by Beyonce (<a href="https://open.spotify.com/album/6FJxoadUE4JNVwWHghBwnb?si=RSfqXehORo2QK4Dg95FFuA">Spotify</a>), and <i>Remain In Light</i> by Angelique Kidjo. Also, these playlists, with one song each from my favorite albums from 2024: <a href="https://open.spotify.com/playlist/0plT5tvEl6lVLrQDk0X3eu?si=fe06480b57f64999">pop</a> and <a href="https://open.spotify.com/playlist/5iHDUPHT30iNd4Feg0yg4f?si=737a0b1a27924789">jazz</a>. </small>
           <br /><br /><br /><br />
