--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # description of the site (multiple lines allowed)
   Hello there! I’m Shihan&mdash;thanks for stopping by. I live in Palo Alto, CA. I am deeply fascinated by mathematics, physics, language, and music. I play the violin, compose with my MPK Mini Plus, and have a music taste that defies genre (and occasionally logic). When I’m not actively immersed in one of these pursuits, there’s a good chance I’m sitting very still, appearing contemplative&mdash;while secretly daydreaming about my next snack. I aspire to nurture my passions and use them to make meaningful contributions to the world ... ideally with a bit of joy, curiosity, and the occasional pastry along the way.
           <br /><br />
 
-          <small><b>Recent news</b>: <i>GPT-5 helps mathematician solve a 40-year-old open problem.</i>The AI collaborated with UCLA Professor Ernest Ryu to help solve a decades-old optimisation problem, finding new examples showing where certain mathematical methods can fail whilst simultaneously improving classic results in optimisation theory.</small>
+          <small><b>Recent news</b>: <i>Ramanujan's Pi links to black holes.</i>Researchers at the Centre for High Energy Physics (CHEP), Indian Institute of Science (IISc) discovered that Ramanujan’s classic &#960;-formulas arise naturally in modern theories describing critical phenomena and black holes. The connection suggests his early mathematics may have foreshadowed key structures in today’s high-energy physics.</small>
           <br /><br />
           <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>Crime and Punishment</i> by Fyodor Dostoevsky.</small>
           <br /><br />
