--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: > # description of the site (multiple lines allowed)
 
           <small><b>Recent news</b>: <i>Ramanujan's Pi links to black holes.</i> Researchers at the Centre for High Energy Physics (CHEP), Indian Institute of Science (IISc) discovered that Ramanujan’s classic &#960;-formulas arise naturally in modern theories describing critical phenomena and black holes. The connection suggests his early mathematics may have foreshadowed key structures in today’s high-energy physics.</small>
           <br /><br />
-          <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>Crime and Punishment</i> by Fyodor Dostoevsky.</small>
+          <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>The Brothers Karamazov</i> by Fyodor Dostoevsky.</small>
           <br /><br />
           <small><b>Recent Movies</b>: <i>Mad Max: Fury Road</i> (2015 d. George Miller), and <i>Furiosa: A Mad Max Saga</i> (2024 d. George Miller)</small>
           <br /><br />
