--- a/_data/home.yml
+++ b/_data/home.yml
@@ -51,7 +51,7 @@ personal_entries:
     url: personal
 
   - title: Wrapped
-    url: wrapped
+    url: wrapped-2025
 
   - title: Tom Hull
     url: tomhull
