--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # description of the site (multiple lines allowed)
           <br /><br />
           <small><b>Currently reading</b>: <i>The Shadow Rising</i> by Robert Jordan and <i>The Brothers Karamazov</i> by Fyodor Dostoevsky.</small>
           <br /><br />
-          <small><b>Recent Movies</b>: <i>The Lord of the Rings: The Fellowship of the Ring</i> (2001 d. Peter Jackson), and <i>The Lord of the Rings: The Two Towers</i> (2002 d. Peter Jackson)</small>
+          <small><b>Recent Movies</b>: <i>The Lord of the Rings: The Fellowship of the Ring</i> (2001 d. Peter Jackson), <i>The Lord of the Rings: The Two Towers</i> (2002 d. Peter Jackson), and <i>The Lord of the Rings: The Return of the King</i> (2003 d. Peter Jackson)</small>
           <br /><br />
           <small><b>Current Music Recs</b>: <i>Renaissance</i> by Beyonce (<a href="https://open.spotify.com/album/6FJxoadUE4JNVwWHghBwnb?si=RSfqXehORo2QK4Dg95FFuA">Spotify</a>), and <i>Remain In Light</i> by Angelique Kidjo. Also, these playlists, with one song each from my favorite albums from 2025: <a href="https://open.spotify.com/playlist/0b6ipXilq8yItCkbfxZRbl?si=022493cba1c64e71">pop</a> and <a href="https://open.spotify.com/playlist/2iO14usuhKlftJvaT3AK0R?si=7f8887dec02c4fed">jazz</a>. </small>
           <br /><br /><br /><br />
